--- a/templates/request_demo.html
+++ b/templates/request_demo.html
@@ -66,7 +66,7 @@
                                         <input class="rdbox" name="email" type="text" placeholder="Email Address" size="17" required>
                                         <p></p>
                                         <span id="rdinput">PHONE NUMBER</span><br/>
-                                        <input class="rdbox" name="phone_number" type="text" placeholder="Phone Number" size="17" required>
+                                        <input class="rdbox" name="phone_number" type="tel" placeholder="Contact Number +(country code)(number)" required maxlength="15" pattern="[+]{1}[0-9]{10,14}">
                                         <p></p>
                                         <span id="rdinput">COUNTRY</span><br/>
                                         <select style="background: #FCFDFE;" required id="country" name="country" class="rdbox">
