--- a/templates/landing_moderators.html
+++ b/templates/landing_moderators.html
@@ -86,7 +86,7 @@
                                     <span class="ms-3 mt-3" id="header">Open Ticket</span>
                                 </div>
                                 <div class="col-4 border-bottom">
-                                    <span class="mt-3" id="content">4238</span>
+                                    <span class="mt-3" id="content">{{ all_issues["active"] }}</span>
                                 </div>
                             </div>
                             <!-- third row -->
@@ -95,7 +95,7 @@
                                     <span class="ms-3 mt-4" id="header">Closed Ticket</span>
                                 </div>
                                 <div class="col-4 mb-3 border-bottom">
-                                    <span class="mt-4" id="content">1005</span>
+                                    <span class="mt-4" id="content">{{ all_issues["closed"] }}</span>
                                 </div>
                             </div>
 							<div class="row">
