--- a/templates/test_item_rating.html
+++ b/templates/test_item_rating.html
@@ -76,6 +76,7 @@
                 <span id="testhead">Test Item Rating</span>
             </div>
             <!-- first box -->
+			{% if role == "store_owner" %}
             <div class="container pt-3">
                 <div class="row cpbox">
                         <!-- first row -->
@@ -130,6 +131,64 @@
                         <div class="row"></div>
                 </div>
             </div>
+			{% else %}
+			<div class="container pt-3">
+                <div class="row cpbox">
+                        <!-- first row -->
+                        <div class="row pb-4">
+                            <span class="ms-3" id="headline">Enter Item Details</span>
+                        </div>
+                        <!-- second row -->
+                        <div class="row">
+                            <span class="ms-3 pb-2" id="inputhead">Item Name</span>
+                            <input class="ms-4 cpinput-l" type="text" placeholder="Name" name="name" disabled required value="preset">
+                        </div>
+                        <!-- third row -->
+                        <div class="row pt-3 pb-3">
+                            <div class="col">
+                                <span class="ms-3 pb-2" id="inputhead">Item Price</span>
+                                <input class="ms-sm-3 ps-2 cpinput-s" type="text" placeholder="Price" name="price" disabled required value="89">
+                            </div>
+                            <div class="col">
+                            <span class="pb-2" id="inputhead">Target User Age Group</span>
+								<select class="ps-2 cpinput-s" required id="agegroup" name="agegroup" class="rdbox" disabled required>
+									<option value="" disabled hidden>Age Group</option>
+									<option value="10" disabled>below 20s</option>
+									<option value="20" selected>20-29</option>
+									<option value="30" disabled>30-39</option>
+									<option value="40" disabled>40-49</option>
+									<option value="50" disabled>50-59</option>
+									<option value="60" disabled>60-69</option>
+									<option value="70" disabled>70-79</option>
+									<option value="80" disabled>above 80s</option>
+								</select>
+                            </div>
+                        </div>
+                        <!-- fourth row -->
+                        <div class="row">
+                            <div class="col">
+                                <span class="ms-3 pb-2" id="inputhead">Brand</span>
+                                <input class="ms-sm-3 ps-2 cpinput-s" type="text" placeholder="Brand" name="brand" disabled required value="preset">
+                            </div>
+							<div class="col">
+                                <span class="pb-2" id="inputhead">Gender</span>
+                                <select class="ps-2 cpinput-s" required id="gender" name="gender" class="rdbox" disabled required >
+									<option value="" disabled hidden>Gender</option>
+									<option value="Males" selected>Males</option>
+									<option value="Females" disabled>Females</option>
+								</select>
+                            </div>
+                        </div>
+                        <!-- fifth row -->
+                        <div class="row pt-4">
+                            <button class="ms-4 createbtn" name="test" type="submit">Test</button>
+                        </div>
+                        <div class="row"></div>
+                </div>
+            </div>
+			{% endif %}
+			
+			
             <!-- second box -->
             <div class="container pt-4">
                 <div class="row pbox-m">
