--- a/templates/approve_reject_store_owners_moderator.html
+++ b/templates/approve_reject_store_owners_moderator.html
@@ -78,7 +78,7 @@
                             <img class="icon_sb" src="images/overview_sidebar.png" />
                             <span>Overview</span>
                         </a>
-                        <a class="ps-4 p-3 pt-4" id="link_sb" href="/problemreported">
+                        <a class="ps-4 p-3 pt-4" id="link_sb" href="/problemsreported">
                             <img class="icon_sb" src="images/problem_reported_sidebar.png" />
                             <span>Problems Reported</span>
                         </a>
