--- a/templates/landing_moderators.html
+++ b/templates/landing_moderators.html
@@ -39,7 +39,7 @@
                             <img class="icon_sb" src="images/overview_sidebar_active.png" />
                             <span>Overview</span>
                         </a>
-                        <a class="ps-4 p-3 pt-4" id="link_sb" href="/problemreported">
+                        <a class="ps-4 p-3 pt-4" id="link_sb" href="/problemsreported">
                             <img class="icon_sb" src="images/problem_reported_sidebar.png" />
                             <span>Problems Reported</span>
                         </a>
