--- a/templates/index.html
+++ b/templates/index.html
@@ -38,12 +38,12 @@
                 <a href="/about" class="header-link">About Us</a>
                 <a href="/contactus" class="header-link">Contact Us</a>
                 <a href="/subscription" class="header-link">Subscription Plan</a>
-				{% if role == "store_owner" or "demo_user" or "sign_up_user" %}				
-				<a href="/login" class="header-link">Project Overview</a>
+				{% if role == "store_owner" or role == "demo_user" or role == "sign_up_user" %}				
+				<a href="/projectoverview" class="header-link">Project Overview</a>
 				{% elif role == "moderator" %}
-				<a href="/login" class="header-link">Moderator Overview</a>
+				<a href="/moderatoroverview" class="header-link">Moderator Overview</a>
 				{% elif role == "administrator" %}
-				<a href="/login" class="header-link">Administrator Overview</a>
+				<a href="/administratoroverview" class="header-link">Administrator Overview</a>
 				{% else %}				
                 <a href="/login" class="header-link">Login/Signup</a>
 				{% endif %}
