Update the file to follow the new design

--- a/templates/create_project.html
+++ b/templates/create_project.html
@@ -103,6 +103,16 @@
                             </div>
                         </div>
                         <!-- fourth row -->
+			<div class="row">
+			     <span class="ms-3 pb-2" id="inputhead">Target User Groups</span>
+			     <select class="ms-3 cpinput-s rdbox" required>
+				     <option value="" disabled selected hidden>Target User Groups</option>
+				     <option value="All">All Category</option>
+				     <option value="shoes">Shoes</option>
+				     <!--must connect to the database -->
+			      </select>
+			</div>
+			<!--fifth row -->
                         <div class="row pt-5">
                             <button class="ms-4 createbtn" name="create" type="submit">Create</button>
                         </div>
