Update a few things to follow the new wireframe

--- a/templates/test_item_rating.html
+++ b/templates/test_item_rating.html
@@ -91,13 +91,9 @@
                         <!-- third row -->
                         <div class="row pt-3 pb-3">
                             <div class="col">
-                                <span class="ms-3 pb-2" id="inputhead">Item Price</span>
-                                <input class="ms-sm-3 ps-2 cpinput-s" type="text" placeholder="Price" name="price" required>
-                            </div>
-                            <div class="col">
                             <span class="pb-2" id="inputhead">Target User Age Group</span>
 								<select class="ps-2 cpinput-s" required id="agegroup" name="agegroup" class="rdbox" required>
-									<option value="" disabled selected hidden>Age Group</option>
+									<option value="" disabled selected hidden>Category</option>
 									<option value="10">below 20s</option>
 									<option value="20">20-29</option>
 									<option value="30">30-39</option>
@@ -110,21 +106,6 @@
                             </div>
                         </div>
                         <!-- fourth row -->
-                        <div class="row">
-                            <div class="col">
-                                <span class="ms-3 pb-2" id="inputhead">Brand</span>
-                                <input class="ms-sm-3 ps-2 cpinput-s" type="text" placeholder="Brand" name="brand" required>
-                            </div>
-							<div class="col">
-                                <span class="pb-2" id="inputhead">Gender</span>
-                                <select class="ps-2 cpinput-s" required id="gender" name="gender" class="rdbox" required>
-									<option value="" disabled selected hidden>Gender</option>
-									<option value="Males">Males</option>
-									<option value="Females">Females</option>
-								</select>
-                            </div>
-                        </div>
-                        <!-- fifth row -->
                         <div class="row pt-4">
                             <button class="ms-4 createbtn" name="test" type="submit">Test</button>
                         </div>
