--- a/templates/view_project.html
+++ b/templates/view_project.html
@@ -93,7 +93,7 @@
             </div>
             <!-- first box -->
             <div class="container pt-4">
-                <div class="row pbox-l">
+                <div class="row pbox-l" style="height: unset;min-height: 200px;max-height: 467px;">
                     <!-- first row -->
                     <div class="row pt-4">
                         <span class="ms-3" id="headline">{{	project_information["pname"] }}</span>
