--- a/templates/test_item_rating.html
+++ b/templates/test_item_rating.html
@@ -90,10 +90,18 @@
                         </div>
                         <!-- third row -->
                         <div class="row pt-3 pb-3">
-                            <div class="col">
-                            <span class="pb-2" id="inputhead">Target User Age Group</span>
-								<select class="ps-2 cpinput-s" required id="agegroup" name="agegroup" class="rdbox" required>
+						<div class="col">
+                            <span class="ms-3 pb-2" id="inputhead">Item Category</span>
+								<select class="ms-3 ps-2 cpinput-s" required id="category" name="category" class="rdbox" required>
 									<option value="" disabled selected hidden>Category</option>
+									<option value="All">All Category</option>
+									<option value="Shoes">Shoes</option>
+								</select>
+                            </div>
+                            <div class="col">
+                            <span class="ms-3 pb-2" id="inputhead">Target User Age Group</span>
+								<select class="ms-3 ps-2 cpinput-s" required id="agegroup" name="agegroup" class="rdbox" required>
+									<option value="" disabled selected hidden>Select an Age Group</option>
 									<option value="10">below 20s</option>
 									<option value="20">20-29</option>
 									<option value="30">30-39</option>
@@ -126,9 +134,17 @@
                         </div>
                         <!-- third row -->
                         <div class="row pt-3 pb-3">
+						<div class="col">
+                            <span class="ms-3 pb-2" id="inputhead">Item Category</span>
+								<select class="ms-3 ps-2 cpinput-s" required id="category" name="category" class="rdbox" required>
+									<option value="" disabled selected hidden>Category</option>
+									<option value="All" selected>All Category</option>
+									<option value="Shoes" disabled>Shoes</option>
+								</select>
+                            </div>
                             <div class="col">
                             <span class="pb-2" id="inputhead">Target User Age Group</span>
-								<select class="ps-2 cpinput-s" required id="agegroup" name="agegroup" class="rdbox" disabled required>
+								<select class="ms-3 ps-2 cpinput-s" required id="agegroup" name="agegroup" class="rdbox" disabled required>
 									<option value="" disabled hidden>Age Group</option>
 									<option value="10" disabled>below 20s</option>
 									<option value="20" selected>20-29</option>
